Lf drugs fixes (#37)
* Linked drug and disease names (target pages currently do not exist)

* Updated known drugs to use OtTableRF + DataDownloader

* Added clinical trials count to drugs summary

* Added light purple color value for pie charts

* Configured color for pie charts

* Fixed layout of charts section to avoid too much blank space

* Fixed cropped bar chart labels

* Fixed count labels to allow for 4 digit values

* Removed target column from drugs widget on target profile page

* Added configuration for 2-tier header in drugs table

* Updated dependencies for ot-ui

* Removed typo

* Fixed chemical probes table download bugs

* Updated chemical probes info message

* ProteinInfo: updated tabs to new ot-ui style

* ProteinInfo: added space between tabs and content

* ProteinInfo: fixed link to uniprot keywords

* ProteinInfo: added links to publications in subunit data panel

* ProteinInfo: added links to By similarity in subunit data panel

* Removed redundant Fragment tag

* Updated colours to ot-ui palette

--- a/src/index.css
+++ b/src/index.css
@@ -21,3 +21,7 @@ code {
 .dc-chart .pie-slice path {
   stroke: #afafaf;
 }
+
+.dcChartOverflow svg {
+  overflow: visible;
+}
